# casclik_examples

./: README.md
casclik_basics/: CMakeLists.txt  package.xml  setup.py
casclik_basics/src/casclik_basics/: __init__.py  robot_interface.py
casclik_examples/: CMakeLists.txt  package.xml
casclik_tests/: CMakeLists.txt  README.md  package.xml
casclik_tests/controllers/: pr2_controllers.yaml  ur5_controllers.yaml
casclik_tests/launch/: aertbelien2014_example.launch  moe2016_example1.launch  moe2016_example2.launch  test_default_robot_interface.launch  test_default_robot_interface_ur5.launch  tracking_input_marker.launch
casclik_tests/rviz/: pr2.rviz  ur5.rviz  ur5_input.rviz
casclik_tests/scripts/: aertbelien2014_example.py  input_marker.py  moe2016_example1.py  moe2016_example2.py  test_default_robot_interface.py  tracking_input_marker.py  ur5_line_grasp_example.py
